# drag-rs

./: Cargo.toml  deny.toml
.changes/: config.json  default-features.md  drag-mode-api.md  drag-mode.md  fix-drag-crash-intel.md  multi-webview.md  objc2.md  rwh-min-ver.md
.github/workflows/: check.yml
crates/drag/: CHANGELOG.md  Cargo.toml
crates/drag/src/: lib.rs
crates/drag/src/platform_impl/gtk/: mod.rs
crates/drag/src/platform_impl/macos/: mod.rs
crates/drag/src/platform_impl/windows/: mod.rs
crates/tauri-plugin-drag/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin-drag-as-window/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin-drag-as-window/permissions/autogenerated/: reference.md
crates/tauri-plugin-drag-as-window/permissions/schemas/: schema.json
crates/tauri-plugin-drag-as-window/src/: api-iife.js  commands.rs
crates/tauri-plugin-drag/permissions/autogenerated/: reference.md
crates/tauri-plugin-drag/permissions/schemas/: schema.json
crates/tauri-plugin-drag/src/: api-iife.js  commands.rs
examples/tauri/: Cargo.toml
examples/tauri-dragout/: Cargo.toml
