[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
edition = "2021"
authors = ["CrabNebula Ltd."]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
base64 = "0.22.1"
tao = "0.34.5"
winit = "0.30.5"
wry = "0.54.2"
dunce = "1.0.5"
tauri-build = "2.5.5"
tauri-plugin = { version = "2.5.3", features = ["build"] }
drag = { path = "./crates/drag", features = ["serde"] }
tauri-plugin-drag = { path = "./crates/tauri-plugin-drag" }
tauri-plugin-drag-as-window = { path = "./crates/tauri-plugin-drag-as-window" }
