[package]
name = "drag"
version = "2.1.1"
description = "Start a drag operation out of a window"
authors = ["CrabNebula Ltd."]
edition = { workspace = true }
license = { workspace = true }

[dependencies]
raw-window-handle = "0.6"
thiserror.workspace = true
serde = { workspace = true, optional = true }
log = "0.4"

[dev-dependencies]
tao.workspace = true
winit.workspace = true
wry.workspace = true
tauri.workspace = true

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.4"
objc2-foundation = { version = "0.3", features = [
  "std",
  "NSGeometry",
  "NSString",
  "NSURL",
  "NSData",
  "NSArray",
  "NSDictionary",
  "NSEnumerator",
  "NSObject",
] }
objc2-app-kit = { version = "0.3", features = [
  "std",
  "NSEvent",
  "NSImage",
  "NSPasteboard",
  "NSDragging",
  "NSDraggingItem",
  "NSDraggingSession",
  "NSView",
  "NSWindow",
  "NSApplication",
] }
core-graphics = "0.24.0"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.18.1" }
gdk = { version = "0.18.0" }
gdkx11 = "0.18.0"

[target."cfg(target_os = \"windows\")".dependencies]
dunce.workspace = true
windows-core = "0.58"
windows = { version = "0.52", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Ole",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Gdi",
] }

[features]
serde = ["dep:serde"]
